--- a/var/lib/torrentwatch-xa/.gitignore
+++ b/var/lib/torrentwatch-xa/.gitignore
@@ -1,7 +1,7 @@
 !config_cache/README.md
 config_cache/**
-!rss_cache/
+!rss_cache/README.md
 rss_cache/**
-!tvdb_cache/
+!tvdb_cache/README.md
 tvdb_cache/**
 netbeans-metadata/
